--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "@effect/platform-node": "^0.48.2",
     "@effect/schema": "^0.66.13",
     "@effect/sql-sqlite-node": "^0.1.16",
+    "@opentelemetry/sdk-metrics": "^1.24.0",
     "@opentelemetry/sdk-trace-node": "^1.24.0",
+    "@opentelemetry/sdk-trace-web": "^1.24.0",
     "effect": "^3.1.1",
     "effect-http": "^0.64.3",
     "effect-http-node": "^0.12.3"
