--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:server": "rm -rf notes.db && tsx src/api-server.ts",
+    "start:client": "tsx src/api-client.ts"
   },
   "keywords": [],
   "author": "",
@@ -53,9 +54,13 @@
     "@effect/platform-node": "^0.48.2",
     "@effect/schema": "^0.66.13",
     "@effect/sql-sqlite-node": "^0.1.16",
+    "@opentelemetry/exporter-metrics-otlp-proto": "^0.51.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.51.0",
     "@opentelemetry/sdk-metrics": "^1.24.0",
+    "@opentelemetry/sdk-trace-base": "^1.24.0",
     "@opentelemetry/sdk-trace-node": "^1.24.0",
     "@opentelemetry/sdk-trace-web": "^1.24.0",
+    "dotenv": "^16.4.5",
     "effect": "^3.1.1",
     "effect-http": "^0.64.3",
     "effect-http-node": "^0.12.3"
